# pal_person_detector_opencv

./: CMakeLists.txt  package.xml
launch/: detector.launch
src/: person_detector.cpp
